# solana-depin-program

./: 1.json  Anchor.toml  Cargo.toml  README.md  Technical Spec.md  package-lock.json  package.json
metadata/: README.md  dpit-metadata.json  tokenA-metadata.json  tokenB-metadata.json  tokenC-metadata.json
programs/depin-program/: Cargo.toml
programs/depin-program/src/: constants.rs  errors.rs  events.rs  lib.rs  structs.rs
programs/depin-program/src/instructions/: burn.rs  create.rs  init.rs  init_escrow_accounts_1.rs  init_escrow_accounts_2.rs  mint.rs  mod.rs  stake.rs  unstake.rs
programs/depin-program/src/states/: global.rs  mod.rs  stake.rs
rust-apis/event-listener/: Cargo.toml
rust-apis/event-listener/src/: main.rs
rust-apis/solana-interaction/: Cargo.toml
rust-apis/solana-interaction/src/: execute.rs  helper.rs  main.rs  query.rs  structs.rs
scripts/: constant.ts  dpit.ts  index.ts  solanaService.ts
tests/: depin-program.ts
