[package]
name = "solana-interaction"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"
anchor-spl = "0.30.1"
anchor-client = { version = "0.30.1 ", features = ["async"] }
depin-program = { path = "/Users/tarunjaiswal/Documents/assignments/solana-depin-program/programs/depin-program" }

